// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AlertBlock /> AlertBlock - danger 1`] = `
<div
  className="alert-block alert alert-danger"
  role="alert"
>
  <h3
    className="alert-block-title"
  >
    This is danger
  </h3>
  <div
    className="alert-block-body"
  >
    <svg
      className="icon alert-block-icon"
      height={19}
      viewBox="0 0 22 19"
      width={22}
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M-1-2h24v24H-1z"
        />
        <path
          d="M0 19h22L11 0 0 19zm12-3h-2v-2h2v2zm0-4h-2V8h2v4z"
          fill="currentColor"
        />
      </g>
    </svg>
    Danger text
  </div>
</div>
`;

exports[`<AlertBlock /> AlertBlock - warning 1`] = `
<div
  className="alert-block alert alert-warning"
  role="alert"
>
  <h3
    className="alert-block-title"
  >
    This is warning
  </h3>
  <div
    className="alert-block-body"
  >
    <svg
      className="icon alert-block-icon"
      height={20}
      viewBox="0 0 20 20"
      width={20}
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M-2-2h24v24H-2z"
        />
        <path
          d="M10 0C4.48 0 0 4.48 0 10s4.48 10 10 10 10-4.48 10-10S15.52 0 10 0zm1 15H9v-2h2v2zm0-4H9V5h2v6z"
          fill="currentColor"
        />
      </g>
    </svg>
    Warning text
  </div>
</div>
`;
